@@ -19,7 +19,7 @@
 package org.apache.pinot.query.runtime.executor;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -34,10 +34,10 @@ import org.apache.pinot.query.runtime.operator.MultiStageOperator;
 import org.apache.pinot.query.runtime.operator.OpChain;
 import org.apache.pinot.query.runtime.plan.MultiStageQueryStats;
 import org.apache.pinot.query.runtime.plan.OpChainExecutionContext;
+import org.apache.pinot.spi.exception.QueryCancelledException;
 import org.apache.pinot.spi.executor.ExecutorServiceUtils;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.testng.Assert;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.BeforeMethod;
@@ -46,6 +46,8 @@ import org.testng.annotations.Test;
 import static org.mockito.Mockito.clearInvocations;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.fail;
 
 
 public class OpChainSchedulerServiceTest {
@@ -78,11 +80,10 @@ public class OpChainSchedulerServiceTest {
     MailboxService mailboxService = mock(MailboxService.class);
     when(mailboxService.getHostname()).thenReturn("localhost");
     when(mailboxService.getPort()).thenReturn(1234);
-    WorkerMetadata workerMetadata = new WorkerMetadata(0, ImmutableMap.of(), ImmutableMap.of());
+    WorkerMetadata workerMetadata = new WorkerMetadata(0, Map.of(), Map.of());
     OpChainExecutionContext context =
-        new OpChainExecutionContext(mailboxService, 123L, Long.MAX_VALUE, ImmutableMap.of(),
-            new StageMetadata(0, ImmutableList.of(workerMetadata), ImmutableMap.of()), workerMetadata, null, null,
-            true);
+        new OpChainExecutionContext(mailboxService, 123L, Long.MAX_VALUE, Long.MAX_VALUE, Map.of(),
+            new StageMetadata(0, ImmutableList.of(workerMetadata), Map.of()), workerMetadata, null, null, true);
     return new OpChain(context, operator);
   }
 
@@ -100,7 +101,7 @@ public class OpChainSchedulerServiceTest {
 
     schedulerService.register(opChain);
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
@@ -117,7 +118,7 @@ public class OpChainSchedulerServiceTest {
 
     schedulerService.register(opChain);
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
@@ -135,7 +136,7 @@ public class OpChainSchedulerServiceTest {
 
     schedulerService.register(opChain);
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
@@ -153,7 +154,7 @@ public class OpChainSchedulerServiceTest {
 
     schedulerService.register(opChain);
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
@@ -179,12 +180,12 @@ public class OpChainSchedulerServiceTest {
 
     schedulerService.register(opChain);
 
-    Assert.assertTrue(opChainStarted.await(10, TimeUnit.SECONDS), "op chain doesn't seem to be started");
+    assertTrue(opChainStarted.await(10, TimeUnit.SECONDS), "op chain doesn't seem to be started");
 
     // now cancel the request.
-    schedulerService.cancel(123);
+    schedulerService.cancel(123L);
 
-    Assert.assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
+    assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
     Mockito.verify(_operatorA, Mockito.times(1)).cancel(Mockito.any());
   }
 
@@ -203,7 +204,82 @@ public class OpChainSchedulerServiceTest {
 
     schedulerService.register(opChain);
 
-    Assert.assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
+    assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
     Mockito.verify(_operatorA, Mockito.times(1)).cancel(Mockito.any());
+  }
+
+  @Test
+  public void shouldThrowQueryCancelledExceptionWhenRegisteringOpChainAfterQueryCancellation() {
+    OpChain opChain = getChain(_operatorA);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+
+    // First cancel the query with the same requestId (123L as defined in getChain method)
+    schedulerService.cancel(123L);
+
+    // Now try to register an OpChain for the same query - should throw QueryCancelledException
+    try {
+      schedulerService.register(opChain);
+      fail("Expected QueryCancelledException to be thrown when registering OpChain after query cancellation");
+    } catch (QueryCancelledException e) {
+      assertTrue(e.getMessage().contains("Query has been cancelled before op-chain"));
+      assertTrue(e.getMessage().contains("being scheduled"));
+    }
+  }
+
+  @Test
+  public void shouldHandleConcurrentCancellationAndRegistration()
+      throws InterruptedException {
+    OpChain opChain = getChain(_operatorA);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+
+    // Setup mock to slow down the execution so we can test concurrent cancellation
+    CountDownLatch registrationStarted = new CountDownLatch(1);
+    CountDownLatch cancellationCanProceed = new CountDownLatch(1);
+    Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
+      registrationStarted.countDown();
+      cancellationCanProceed.await();
+      return SuccessMseBlock.INSTANCE;
+    });
+    Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
+
+    // Start registration in a separate thread
+    CountDownLatch registrationCompleted = new CountDownLatch(1);
+    boolean[] registrationSucceeded = {false};
+    Thread registrationThread = new Thread(() -> {
+      try {
+        schedulerService.register(opChain);
+        registrationSucceeded[0] = true;
+      } catch (QueryCancelledException e) {
+        // Expected if cancellation happens before registration
+        registrationSucceeded[0] = false;
+      } finally {
+        registrationCompleted.countDown();
+      }
+    });
+
+    registrationThread.start();
+
+    // Wait for registration to start
+    assertTrue(registrationStarted.await(10, TimeUnit.SECONDS), "Registration should have started");
+
+    // Now cancel the query while it's running
+    schedulerService.cancel(123L);
+
+    // Allow the opchain execution to complete
+    cancellationCanProceed.countDown();
+
+    // Wait for registration thread to complete
+    assertTrue(registrationCompleted.await(10, TimeUnit.SECONDS), "Registration thread should complete");
+
+    // The registration should have succeeded since it started before cancellation
+    assertTrue(registrationSucceeded[0], "Registration should have succeeded");
+
+    // Now try to register another OpChain with the same requestId - should fail
+    try {
+      schedulerService.register(getChain(_operatorA));
+      fail("Expected QueryCancelledException for subsequent registration after cancellation");
+    } catch (QueryCancelledException e) {
+      assertTrue(e.getMessage().contains("Query has been cancelled before op-chain"));
+    }
   }
 }
